--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #bee60f;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -76,7 +76,7 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 span {
-    color: #ff004f;
+    color: #bee60f;
 }
 
 /* ----about--- */
@@ -128,7 +128,7 @@ nav ul li a:hover::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #bee60f;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -145,7 +145,7 @@ nav ul li a:hover::after {
 }
 
 .tab-contents ul li span {
-    color: #ec41a5;
+    color: #27acff;
     font-size: 14px;
 }
 
@@ -199,7 +199,7 @@ nav ul li a:hover::after {
 }
 
 .projects-list div:hover {
-    background: #ff004f;
+    background: #ff2600;
     transform: translateY(-10px);
 }
 
@@ -232,7 +232,7 @@ nav ul li a:hover::after {
 .layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #33ff00);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -278,7 +278,7 @@ nav ul li a:hover::after {
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #bee60f;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -287,7 +287,7 @@ nav ul li a:hover::after {
 }
 
 .btn:hover {
-    background: #ff004f;
+    background: #bee60f;
 }
 
 /* ----contact--- */
@@ -305,7 +305,7 @@ nav ul li a:hover::after {
 }
 
 .contact-left p i {
-    color: #ff004f;
+    color:#bee60f;
     margin-right: 15px;
     font-size: 25px;  
 }
@@ -324,13 +324,13 @@ nav ul li a:hover::after {
 }
 
 .social-icons a:hover {
-    color: #ff004f;
+    color: #bee60f;
     transform: translateY(-5px);
 }
 
 .btn.btn2 {
     display: inline-block;
-    background: #ff004f;
+    background: #bee60f;
 }
 
 .contact-right form {
@@ -366,7 +366,7 @@ form .btn2 {
 }
 
 .copyright i {
-    color: #ff004f;
+    color: #bee60f;
 }
 
 /* ----css for small screen--- */
@@ -418,6 +418,7 @@ nav .fa-solid {
         flex-basis: 100%;
     }
     .about-col-1 {
+        margin-top: 30px;
         margin-bottom: 30px;
     }
     .about-col-2 {
@@ -433,4 +434,10 @@ nav .fa-solid {
     .copyright {
         font-size: 14px;
     }
+}
+
+#msg {
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
 }
